--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,9 +15,26 @@ set(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "A dockerfile and docker compose generator with an interactive cli")
 set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
 set(CPACK_PACKAGE_VERSION_MAJOR "0")
-set(CPACK_PACKAGE_VERSION_MINOR "1")
+set(CPACK_PACKAGE_VERSION_MINOR "2")
 install(TARGETS build-me-a-container DESTINATION bin)
 
+find_program(PANDOC pandoc)
+if(NOT PANDOC)
+    message(WARNING "Pandoc not found, skipping man page generation.")
+endif()
+
+set(MAN_SRC "${CMAKE_CURRENT_SOURCE_DIR}/docs/build-me-a-container.1.md")
+set(MAN_OUT "${CMAKE_CURRENT_BINARY_DIR}/build-me-a-container.1")
+
+add_custom_command(
+    OUTPUT ${MAN_OUT}
+    COMMAND ${PANDOC} -s -t man ${MAN_SRC} -o ${MAN_OUT}
+    DEPENDS ${MAN_SRC}
+    COMMENT "Generating groff man page"
+)
+
+add_custom_target(generate_man ALL DEPENDS ${MAN_OUT})
+install(FILES ${MAN_OUT} DESTINATION share/man/man1 COMPONENT documentation)
 set(CPACK_GENERATOR "DEB;RPM;TGZ")
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
